# my_utils

./: .gitignore  CMakeLists.txt  install.sh
include/: ArgumentUtils.h  Bit.h  OSUtils.h  StringUtils.h  Time.h
src/: Bit.cpp  OSUtils.cpp  StringUtils.cpp
unit_tests/: CMakeLists.txt  doctest.h  main.cpp  unit_tests.cpp
